# recursia

./: .gitignore  DEV.md  MATHEMATICAL_DERIVATIONS.md  MATHEMATICAL_SUPPLEMENT.md  OSH.md  OSH_ERROR_CORRECTION_IMPLEMENTATION.md  README.md  UNIFIED_ARCHITECTURE.md  license.md  pyproject.toml  requirements-optimized.txt  requirements.txt  run_comprehensive_validation.py  run_validation.sh  start-all.sh  start-and-test.sh  start-recursia-complete.sh  start-recursia.sh  status-recursia.sh  stop-all.sh  stop-recursia.sh  temp_backend_start.py
experiments/: consciousness_test.recursia  memory_field_simulation.recursia  observer_effect.recursia  osh_validation_suite.py  test_superposition.recursia
frontend/: .env.example  DEV.md  SYSTEM_REQUIREMENTS.md  check-backend-health.sh  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  test-measurement-display.html  test-vite-websocket.html  test-websocket-connection.html  test-websocket-minimal.html
frontend/src/: App.tsx  index.css  index.tsx  vite-env.d.ts
language/: recursia.grammar
quantum_programs/advanced/: quantum_error_correction.recursia  quantum_teleportation.recursia
quantum_programs/basic/: hello_quantum.recursia  quantum_coin_flip.recursia  simple_entanglement.recursia
scripts/: cleanup_debug_artifacts.py  start-api-test.sh  start-unified-api.sh
scripts/backend/: run_api_server.py
scripts/deployment/: check_and_train_ml_models.ps1  check_and_train_ml_models.sh  recursia-launcher.py  restart-recursia.sh  restart_services.sh  start-fresh.sh  start-recursia-debug.ps1  start-recursia-enterprise.ps1  start-recursia-fixed.ps1  start-recursia-fixed.sh  start-recursia.ps1  start-recursia.sh  status-recursia-windows.ps1  (+8 more)
src/: __init__.py  __main__.py  cli.py  cli_dashboard.py  recursia.py
static/: dashboard.css  dashboard.js
templates/: dashboard.html
test_results/: osh_validation_report_20250619_172453.txt  qec_expected_results_20250626_060757.json  qec_osh_theoretical_results.json
test_validation_output/: time_series.csv  validation_results.csv
tests/: __init__.py  conftest.py  integration_stress_test_suite.py  osh_theory_validation.py  quantum_validation_suite.py  test_code_editor_snippets.py  test_memory_management.py  test_observer_focus.py  test_recursion_depth.py  test_simple_observer.py  test_websocket_metrics.py
validation/: osh_comprehensive_validator.py  osh_validation_analyzer.py
(+369 files in other folders)
