[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recursia"
version = "1.0.0"
description = "Recursia - Quantum Programming Language"
readme = "README.md"
authors = [{name = "Johnie Waddell", email = "johnie5waddell@outlook.com"}]
license = {text = "license.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: license",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0", 
    "matplotlib>=3.3.0",
    "networkx>=2.5",
    "pandas>=1.3.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "pydantic>=1.8.0",
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "requests>=2.26.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "Pillow>=8.3.0",
    "jinja2>=3.0.0",
    "scikit-learn>=1.0.0",
    "openpyxl>=3.0.0",
    "bcrypt>=3.2.0",
    "cryptography>=35.0.0",
    "PyJWT>=2.3.0",
    "psutil>=5.8.0",
    "reportlab>=3.6.0",
    "zstandard>=0.16.0",
    "lz4>=3.1.0",
    "docopt>=0.6.2",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.34.0",
    "cirq>=0.13.0",
    "pyquil>=3.0.0",
]
ml = [
    "torch>=1.9.0",
    "numba>=0.54.0",
]
database = [
    "redis>=4.0.0",
    "asyncpg>=0.25.0",
]
specialized = [
    "speech-recognition>=3.8.1",
    "ripser>=0.6.0", 
    "statsmodels>=0.13.0",
    "cupy>=9.0.0",
    "mayavi>=4.7.0",
]
dev = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "flake8>=3.9.2",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
]
visualization = [
    "seaborn>=0.13.2",
]

[project.scripts]
recursia = "src.recursia:main"
rcli = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.core", "src.physics", "src.quantum", "src.visualization", "src.simulator", "src.generators"]

[tool.setuptools.package-data]
"src" = ["**/*.grammar", "**/*.md"]
"examples" = ["**/*.recursia"]

[tool.black]
line-length = 88
target-version = ["py38"]